--- a/src/app/multLojas/selecionar-endereco-buscar-loja/selecionar-endereco-buscar-loja.component.html
+++ b/src/app/multLojas/selecionar-endereco-buscar-loja/selecionar-endereco-buscar-loja.component.html
@@ -74,5 +74,5 @@
 
 <div class="ddc">
     <div>Entre na sua conta para selecionar seu endereço.</div>
-    <button style="margin-top: 20px;" mat-button color="warn" [routerLink]="['./entrar']">Entrar</button>
+    <button style="margin-top: 20px;" mat-button color="warn" (click)="onClickEntrar()">Entrar</button>
 </div>
