--- a/src/app/inicio/user-registration/user-registration.component.html
+++ b/src/app/inicio/user-registration/user-registration.component.html
@@ -1,21 +1,12 @@
+<app-toolbar-mult-lojas [pagina]="''"></app-toolbar-mult-lojas>
 <div class="col-sm-12 all">
-
-
     <div class="row c0">
-
-
         <div class="col-sm-12 c2">
-
             <div class="row c3">
 
                 <router-outlet></router-outlet>
 
             </div>
-
         </div>
-
-
     </div>
-
-
 </div>
