--- a/src/app/inicio/home/home.component.css
+++ b/src/app/inicio/home/home.component.css
@@ -80,6 +80,10 @@
     display: block;
 }
 
+a {
+    text-decoration: none;
+}
+
 @media (max-width:600px) {
     .modoDESK {
         display: none;
