--- a/src/app/multLojas/recuperar-conta/recuperar-conta.component.css
+++ b/src/app/multLojas/recuperar-conta/recuperar-conta.component.css
@@ -48,7 +48,6 @@
     width: 70px;
     background-repeat: no-repeat;
     background-size: 70px 70px;
-    position: absolute;
     margin: 30px;
     background-image: url('/assets/images/others/logo.png');
 }
@@ -57,6 +56,13 @@
     text-align: right;
     font-size: 12px;
     margin-top: 10px;
+}
+
+.tttolb {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    align-items: center;
+    display: none;
 }
 
 @media(max-width: 600px) {
@@ -68,5 +74,12 @@
     }
     .a {
         background: white;
+        display: block;
+    }
+    .hCELL {
+        display: none;
+    }
+    .tttolb {
+        display: block;
     }
 }
