--- a/src/app/multLojas/recuperar-conta/recuperar-conta.component.html
+++ b/src/app/multLojas/recuperar-conta/recuperar-conta.component.html
@@ -1,8 +1,7 @@
-<div class="logo"></div>
-
-<div class="a">
+<app-toolbar-mult-lojas [pagina]="'/entrar'"></app-toolbar-mult-lojas>
+<div class="a" [formGroup]="form">
     <div class="b">
-        <div class="sdasd">
+        <div class="sdasd hCELL">
             <button mat-icon-button color="warn" routerLink="/entrar">
             <mat-icon>keyboard_arrow_left</mat-icon>
           </button>
@@ -11,12 +10,12 @@
             Insira seu telefone
         </div>
         <div class="c">
-            <div> <input class="in" placeholder="Telefone" type="tel" mask="(00)00000-0000"> </div>
+            <div> <input class="in" placeholder="(00)00000-0000" formControlName="email" type="tel" mask="(00)00000-0000" (keydown.enter)="recuperar()"> </div>
             <div style="font-size: 12px;text-align: center;color: #8f8f8f;">
                 Enviaremos um SMS com os dados da sua conta para o seu telefone
             </div>
             <div style="margin-top: 20px;">
-                <button style="width: 100%;" mat-raised-button color="primary">Enviar</button>
+                <button style="width: 100%;" mat-raised-button color="primary" (keydown.enter)="recuperar()" [disabled]="btRecC">Enviar</button>
             </div>
         </div>
 
