--- a/src/styles.css
+++ b/src/styles.css
@@ -17,6 +17,10 @@ body {
     font-family: SulSans, Helvetica, sans-serif;
 }
 
+input {
+    outline: none;
+}
+
 .cor1 {
     color: #f7af4f;
 }
@@ -82,6 +86,6 @@ body {
         background: #3b3b3b;
     }
     .cdk-overlay-dark-backdrop {
-        background: white;
+        background: rgba(0, 0, 0, 0.333);
     }
 }
